--- a/styles/qrcode.module.css
+++ b/styles/qrcode.module.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-gap: 10px;
   grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+  margin: 10px;
 }
 
 .gridRow {
@@ -14,6 +15,7 @@
   transition: box-shadow .15s ease;
   cursor: pointer;
   padding: 20px;
+  border: 1px solid #eaeaea;
 }
 
 .gridRow:hover {
